--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emailjs/browser": "^3.5.0",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "styled-components": "^5.3.5",
+        "sweetalert2": "^11.4.8",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
