--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "json-server": "^0.17.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-elastic-carousel": "^0.11.5",
         "react-router": "^6.2.2",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
